--- a/machine_learning.ipynb
+++ b/machine_learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMaIdrZ4r4knzELcNIbQID",
+      "authorship_tag": "ABX9TyOl5p4KLrAE8AP5f5oNZurZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 10,
       "metadata": {
         "id": "kcQ4aYpzbWuA"
       },
@@ -41,8 +41,8 @@
         "    self.x = x\n",
         "    self.y = y\n",
         "    self.__correlation_coefficient = self.__correlacao()\n",
-        "    self.__inclination_coefficient = self.inclinacao()\n",
-        "    self.__intercept_coefficient = self.interceptacao()\n",
+        "    self.__inclination_coefficient = self.__inclinacao()\n",
+        "    self.__intercept_coefficient = self.__interceptacao()\n",
         "\n",
         "  def __correlacao(self):\n",
         "    covariacao = cov(self.x, self.y, bias=True)[0][1]\n",
@@ -61,7 +61,36 @@
         "    return mediay - mediax * self.__inclination_coefficient\n",
         "\n",
         "  def previsao(self, valor):\n",
-        "    return self.__intercept_coefficient + (self.__inclination_coefficient * valor)"
+        "    return self.__intercept_coefficient + (self.__inclination_coefficient * valor)\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = array([1,2,3,4,5])\n",
+        "y = array([2,4,6,8,10])\n",
+        "\n",
+        "lr = LinearRegression(x, y)\n",
+        "previsao = lr.previsao(6)\n",
+        "print(previsao)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Vwii_Y66gtoq",
+        "outputId": "d7f06fd3-ab4a-49d4-f60b-0d4d0a767d80"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12.0\n"
+          ]
+        }
       ]
     }
   ]
