Criado através do Colab

--- a/machine_learning.ipynb
+++ b/machine_learning.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "authorship_tag": "ABX9TyOl5p4KLrAE8AP5f5oNZurZ",
       "include_colab_link": true
     },
@@ -28,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "kcQ4aYpzbWuA"
       },
@@ -82,7 +83,7 @@
         "id": "Vwii_Y66gtoq",
         "outputId": "d7f06fd3-ab4a-49d4-f60b-0d4d0a767d80"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
